Can test on Java 21 now and on 17 without --add-exports
Also forking the JVM for tests not necessary anymore